# my_string

./: CMakeLists.txt  a.out  astr_zip.c  capitalize.c  dedup.c  diff.c  find.c  is_empty.c  len_diff.c  main  main.c  mystring.h  nums_in_range.c  pad.c  point_to.c  rm_left_space.c  rm_right_space.c  rm_space.c  shorten.c  str_zip.c  strcmp_ign_case.c  strtester  take_last.c
